--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,8 @@ coverage.xml
 *.log
 local_settings.py
 db.sqlite3
+
+
 db.sqlite3-journal
 
 # Flask stuff:
@@ -127,3 +129,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+# Text backup files
+*.bak
+
+# Database
+*.sqlite3
